--- a/template-index.html
+++ b/template-index.html
@@ -15,7 +15,7 @@
         }
 
         .container {
-            background-color: darkolivegreen;
+            background-color: gainsboro;
             margin-top: 1em;
             margin-bottom: 1em;
             padding: 0.5em;
